2011-03-07  Jan Steffens  <jan.steffens@gmail.com>

	* liferea 1.7.4-1
	* Upstream update

2011-03-07  Jan Steffens  <jan.steffens@gmail.com>

	* liferea 1.6.5-2
	* Add patch for libnotify-0.7
	* Add hicolor-icon-theme dependency

2010-09-29  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.5-1
	* Upstream update

2010-06-30  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.4-1
	* Upstream update
	* Changed libnotify depends to optdepends
	* Tidied up package description

2010-02-22  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.3-1
	* Upstream update

2010-01-23  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.2-1
	* Upstream update

2009-11-20  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.1-1
	* Upstream update

2009-07-26  Eric Belanger  <eric@archlinux.org>

	* liferea 1.6.0-1
	* Upstream update
	* Updated depends
	* Added lua support

2009-07-01 Jan de Groot  <jgc@archlinux.org>

	* liferea 1.4.28-2
	* Rebuild for xulrunner 1.9.1
	* Remove networkmanager dependencies

2009-04-13  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.28-1
	* Upstream update

2009-03-15  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.27-1
	* Upstream update

2009-02-21  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.25-1
	* Upstream update

2009-02-01  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.24-1
	* Upstream update

2008-12-29  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.23-1
	* Upstream update

2008-11-14  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.22d-1
	* Upstream update

2008-10-27  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.20-1
	* Forced downgrade (close FS#11899)

2008-10-26  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.21b-1
	* Upstream update

2008-10-01  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.20-1
	* Upstream update

2008-09-06  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.19-1
	* Upstream update

2008-08-03  Eric Belanger  <eric@archlinux.org>

	* liferea 1.4.18-2